# groomify

./: CLAUDE.md  FRONTEND_PAYMENT_INTEGRATION_SUMMARY.md  PAYMENT_INTEGRATION_COMPLETE.md  PAYMENT_PHASE1_SUMMARY.md  PAYMENT_TESTING_GUIDE.md
backend/: .gitignore  PAYMENTS_INTEGRATION.md  alembic.ini  main.py  pyproject.toml
backend/app/: web_app.py
backend/app/api/: agreements.py  animal_types.py  appointments.py  auth.py  business_users.py  customers.py  payments.py  pets.py  service_categories.py  services.py  time_blocks.py
backend/app/core/: config.py  database.py  dependencies.py  encryption.py  logger.py  security.py
backend/app/models/: __init__.py  agreement.py  animal_breed.py  animal_type.py  appointment.py  business.py  business_user.py  customer.py  customer_user.py  order.py  payment.py  payment_configuration.py  payment_device.py  pet.py  service.py  service_category.py  staff_availability.py  time_block.py
backend/app/schemas/: __init__.py  agreement.py  animal_breed.py  animal_type.py  appointment.py  auth.py  business.py  business_user.py  customer.py  customer_user.py  note.py  order.py  payment.py  pet.py  service.py  service_category.py  staff_availability.py  time_block.py
backend/app/services/: agreement_service.py  appointment_service.py  auth_service.py  business_user_service.py  (+10 more)
backend/migrations/: env.py
backend/scripts/: dogbreeds.json  load_cat_breeds.py  load_dog_breeds.py  seed_appointments.py  seed_customers.py  seed_groomers.py  seed_lookup_tables.py  seed_services.py
backend/tests/: conftest.py  test_auth.py
(+141 files in other folders)
